--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Nov 05 14:51:37 IST 2022
-sdk.dir=C\:\\Users\\Zaurez\\AppData\\Local\\Android\\Sdk
+#Fri Nov 11 17:42:38 IST 2022
+sdk.dir=C\:\\Users\\rucha bhide\\AppData\\Local\\Android\\Sdk
