event recycler completed (#5)
Co-authored-by: Amit <51860725+Crystalsage@users.noreply.github.com>

--- a/application/app/src/main/AndroidManifest.xml
+++ b/application/app/src/main/AndroidManifest.xml
@@ -14,7 +14,14 @@
         android:theme="@style/Theme.CSIDMCE"
         tools:targetApi="31">
         <activity
-            android:name=".Login"
+            android:name=".event_items"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".event_recycler"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
