--- a/application/build.gradle
+++ b/application/build.gradle
@@ -3,8 +3,7 @@ plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
+    id 'org.jetbrains.kotlin.jvm' version '1.8.0'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.8.0'
+    id 'com.google.gms.google-services' version '4.3.0'
 }
