Add profile screen

--- a/application/app/build.gradle
+++ b/application/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     // For serialization
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1'
 
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     // For JWT authorization
     implementation 'com.auth0:java-jwt:4.2.2'
 }
