--- a/application/app/src/main/AndroidManifest.xml
+++ b/application/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.CSIDMCE"
         tools:targetApi="31">
         <activity
+            android:name=".auth.Profile_screen_ui"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".profile.edit_profile"
             android:exported="false">
             <meta-data
@@ -55,20 +62,20 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".auth.ForgotPassword"
+            android:name=".auth.ForgotPasswordActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".Profile"
+            android:name=".profile.Profile"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <activity android:name=".ui.WelcomeActivity"/>
+        <activity android:name=".ui.WelcomeActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
